--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -262,6 +262,7 @@
   <string name="FACEBOOK_PERMISSIONS_FRIENDS_OF_FRIENDS">Друзья друзей</string>
   <string name="FACEBOOK_PERMISSIONS_ONLYME">Только я</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">общественного</string>
+  <string name="FACE_COLLAPSE">коллапс</string>
   <string name="FAQ_SINA_WEIBO">Не поддерживайте живое видео в блоге Sina</string>
   <string name="FAQ_SINA_WEIBO_TEXT1">1, чтобы убедиться, что учетная запись имеет аутентификацию подлинности в блоге Sina и не является учетной записью черного списка.</string>
   <string name="FAQ_SINA_WEIBO_TEXT2">2, нынешний Сина живет только для поддержки материкового мира Китая.</string>
