首页加入每分钟定时任务用来更新消息时间

--- a/doc/设备发送的时间戳.md
+++ b/doc/设备发送的时间戳.md
@@ -1,5 +1,5 @@
 ####设备带过来的时间戳全是格林尼治时间.
-
+####但是显示时还是需要考虑设备自身的时区的,如果不考虑时间,时间是对的,但显示的不正常了
 ```
 SimpleDateFormat simpleDateFormat = new SimpleDateFormat("yyyyMMdd-HH:mm:ss");
 simpleDateFormat.setTimeZone(TimeZone.getTimeZone("GMT"));
