修复进入 AI 消息页 刷新不到消息的 bug:125454 修复有线连接 cid 选择页面没有选择 cid 时下一步可点击的 bug 修复每日精彩已访客进入时可以读取到之前缓存数据的 bug 在摄像头设置页和固件升级页增加 固件检测的请求,防止检测不到新固件 修复无网络连接下摄像机底部菜单任然可见的 bug 修改从无网络连接切换到有网络连接时不自动发起直播

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1137,6 +1137,7 @@
   <string name="WIRED_MODE_CONNECTED">Verbunden</string>
   <string name="WIRED_SELECT_DEVICE_CID">Gerät auswählen CID</string>
   <string name="WIRED_SELECT_DEVICE_CID_TIPS">Geräte-ID</string>
+  <string name="WIRED_UPGRADE_NON_LAN">Bitte schließen Sie das Telefon und Gerät mit demselben Netzwerk vor der Konfiguration</string>
   <string name="WONDER_TODAY_H_M">Heute HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Gestern HH:mm</string>
   <string name="WeChat">WeChat</string>
